// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCVQuoterAccuracy NEG set first (ASSET-in derived) — quoter == router.static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": true,
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": true,
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": true,
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": true,
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
    ],
    "userAssetDecrease": "3003600000000000000",
    "userUsdcOut": "2970267621112662249",
  },
  "fees": Object {
    "perHopPools": "1000000000000000",
    "perHopTotal": "1200000000000000",
    "perHopTreasury": "200000000000000",
  },
  "note": "NEG set, ASSET-in (direction derived from set). Donation applied to input reserve per hop before quote.",
  "orbit":  [
    "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
    "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
    "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "101001000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "99009910792962445917",
      },
      Object {
        "a": "101001000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "99009910792962445917",
      },
      Object {
        "a": "101001000000000000000",
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "u": "99009910792962445917",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "u": "100000000000000000000",
      },
    ],
  },
  "quoter": Object {
    "perHop": Array [
      "990089207037554083",
      "990089207037554083",
      "990089207037554083",
    ],
    "total": "2970267621112662249",
  },
  "role": "MCVQuoter",
  "routerStatic": "2970267621112662249",
  "usingNeg": true,
}
`;

exports[`MCVQuoterAccuracy POS set first (USDC-in by cursor) — quoter == router.static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": false,
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
    ],
    "userAssetOut": "2970267621112662249",
  },
  "fees": Object {
    "perHopPools": "1000000000000000",
    "perHopTotal": "1200000000000000",
    "perHopTreasury": "200000000000000",
  },
  "flippedToNegAfter": true,
  "note": "POS-first under dual-orbit; default direction is USDC-in. Quoter == router.static == exec; three independent hops proven by events.",
  "orbit":  [
    "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
    "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
    "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "99009910792962445917",
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "u": "101001000000000000000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "u": "100000000000000000000",
      },
    ],
  },
  "quoter": Object {
    "perHop": Array [
      "990089207037554083",
      "990089207037554083",
      "990089207037554083",
    ],
    "total": "2970267621112662249",
  },
  "role": "MCVQuoter",
  "routerStatic": "2970267621112662249",
  "startWith": "POS",
  "usingNeg": false,
}
`;

exports[`MCVQuoterAccuracy POS set first (USDC-in derived) — quoter == router.static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": false,
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0x72c1e366E34aC57376BC71Bda0C093b89ADB57Ee",
        "tokenIn": "0x95401dc811bb5740090279Ba06cfA8fcF6113778",
        "tokenOut": "0xf5059a5D33d5853360D16C683c16e67980206f36",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0x25c71B0B48AE6e8478B3404CEC960a4387f4fDF3",
        "tokenIn": "0x95401dc811bb5740090279Ba06cfA8fcF6113778",
        "tokenOut": "0xf5059a5D33d5853360D16C683c16e67980206f36",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0xa03A7DEE27A1C17F4fdB1d7FA88836e707197971",
        "tokenIn": "0x95401dc811bb5740090279Ba06cfA8fcF6113778",
        "tokenOut": "0xf5059a5D33d5853360D16C683c16e67980206f36",
      },
    ],
    "userAssetOut": "2970267621112662249",
  },
  "fees": Object {
    "perHopPools": "1000000000000000",
    "perHopTotal": "1200000000000000",
    "perHopTreasury": "200000000000000",
  },
  "flippedToNegAfter": true,
  "note": "POS-first under dual-orbit; direction derived from set (USDC-in). Quoter == router.static == exec; three independent hops proven by events.",
  "orbit":  [
    "0x72c1e366E34aC57376BC71Bda0C093b89ADB57Ee",
    "0x25c71B0B48AE6e8478B3404CEC960a4387f4fDF3",
    "0xa03A7DEE27A1C17F4fdB1d7FA88836e707197971",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "99009910792962445917",
        "pool": "0x72c1e366E34aC57376BC71Bda0C093b89ADB57Ee",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0x25c71B0B48AE6e8478B3404CEC960a4387f4fDF3",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0xa03A7DEE27A1C17F4fdB1d7FA88836e707197971",
        "u": "101001000000000000000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0x72c1e366E34aC57376BC71Bda0C093b89ADB57Ee",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0x25c71B0B48AE6e8478B3404CEC960a4387f4fDF3",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xa03A7DEE27A1C17F4fdB1d7FA88836e707197971",
        "u": "100000000000000000000",
      },
    ],
  },
  "quoter": Object {
    "perHop": Array [
      "990089207037554083",
      "990089207037554083",
      "990089207037554083",
    ],
    "total": "2970267621112662249",
  },
  "role": "MCVQuoter",
  "routerStatic": "2970267621112662249",
  "startWith": "POS",
  "usingNeg": false,
}
`;

exports[`MCVQuoterAccuracy dual-orbit flips: after first call (NEG/ASSET-in) → POS/USDC-in; quotes & deltas snapshot 1`] = `
Object {
  "flip": "NEG→POS",
  "hops": 3,
  "lastKnownUserBalances": Object {
    "asset": "100000002970267621112662249",
    "usdc": "100000002970267621112662249",
  },
  "note": "Run #2 after set flip — POS set, USDC-in. Quoter and static must agree; events prove 3 hops.",
  "quote": Object {
    "assetToUsdc": false,
    "perHop": Array [
      "990089207037554083",
      "990089207037554083",
      "990089207037554083",
    ],
    "total": "2970267621112662249",
    "usingNeg": false,
  },
  "role": "MCVQuoter",
  "routerStatic": "2970267621112662249",
  "usingNegAfterFlip": true,
}
`;
